--- a/main.html
+++ b/main.html
@@ -1,48 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Bootstrap Carousel</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <head>
+    <title>My Carousel</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Link your Bootstrap CSS file -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <!-- Link your custom CSS file -->
     <link rel="stylesheet" href="style.css">
-</head>
-<body>
-
-<div id="myCarousel" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#myCarousel" data-slide-to="1"></li>
-    <li data-target="#myCarousel" data-slide-to="2"></li>
-    <li data-target="#myCarousel" data-slide-to="3"></li>
-    <li data-target="#myCarousel" data-slide-to="4"></li>
-  </ol>
-
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner">
-    <div class="item active first-slide">
-      <img src="slide1.jpg" alt="Slide 1">
-      <div class="carousel-caption">
-        <h3>First Slide</h3>
-        <p>This is the first slide.</p>
-      </div>
-    </div>
-
-    <div class="item second-slide">
-      <img src="slide2.jpg" alt="Slide 2">
-      <div class="carousel-caption">
-        <h3>Second Slide</h3>
-        <p>This is the second slide.</p>
-      </div>
-    </div>
-
-    <div class="item third-slide">
-      <img src="slide3.jpg" alt="Slide 3">
-      <div class="carousel-caption">
-        <h3>Third Slide</h3>
-        <p>This is the third slide.</p>
-      </div>
-    </div
+  </head>
+  <body>
+    <!-- Your HTML code for the carousel goes here -->
+    
+    <!-- Link your Bootstrap JS file (must be placed after your HTML code) -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  </body>
+</html>
