--- a/main.html
+++ b/main.html
@@ -12,6 +12,48 @@
   <body>
     <!-- Your HTML code for the carousel goes here -->
     <!DOCTYPE html>
+	  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#myCarousel" data-slide-to="1"></li>
+    <li data-target="#myCarousel" data-slide-to="2"></li>
+    <li data-target="#myCarousel" data-slide-to="3"></li>
+    <li data-target="#myCarousel" data-slide-to="4"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner">
+    <div class="item active first-slide">
+      <!-- Content for first slide -->
+    </div>
+
+    <div class="item second-slide">
+      <!-- Content for second slide -->
+    </div>
+
+    <div class="item third-slide">
+      <!-- Content for third slide -->
+    </div>
+
+    <div class="item fourth-slide">
+      <!-- Content for fourth slide -->
+    </div>
+
+    <div class="item fifth-slide">
+      <!-- Content for fifth slide -->
+    </div>
+  </div>
+
+  <!-- Left and right controls -->
+  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+  </a>
+  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+  </a>
+</div>
+
 <html>
 <head>
 	<title>Bootstrap Carousel</title>
